--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,13 @@
     [mode]="(isHandset$ | async) ? 'over' : 'side'">
     <mat-toolbar color="primary">Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Inicio</a>
-      <a mat-list-item href="#">Eventos</a>
-      <a mat-list-item href="#">Equipo</a>
+      <a mat-list-item routerLink="/">Inicio</a>
+      <a mat-list-item routerLink="/events">Eventos</a>
+      <a mat-list-item routerLink="/team">Equipo</a>
+      <a mat-list-item routerLink="/sponsors">Patrocinadores</a>
     </mat-nav-list>
     <div class="user">
-      <button mat-raised-button>Login</button>
+      <button mat-raised-button (click)="login()">Login</button>
     </div>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -18,14 +19,14 @@
       </button>
       <img class="logo" src="../../assets/images/GDG Pura Vida.png" alt="">
       <span class="toolbar-spacer"></span>
-      <div *ngIf="!(isHandset$ | async)">
-        <button mat-button>Inicio</button>
-        <button mat-button>Eventos</button>
-        <button mat-button>Equipo</button>
-        <button mat-raised-button>Login</button>
-      </div>
+      <nav *ngIf="!(isHandset$ | async)">
+        <button mat-button routerLink="/">Inicio</button>
+        <button mat-button routerLink="/events">Eventos</button>
+        <button mat-button routerLink="/team">Equipo</button>
+        <button mat-button routerLink="/sponsors">Patrocinadores</button>
+        <button mat-raised-button (click)="login()">Login</button>
+      </nav>
     </mat-toolbar>
-    <!-- Add Content Here -->
-    <app-home></app-home>
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
